<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.fragment.SplashFragment">

    <ImageView
        android:layout_width="193dp"
        android:layout_height="108dp"
        android:layout_gravity="center"
        android:src="@drawable/wifi"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="182dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/auth_btn"
        style="@style/btn_corner_32"
        android:backgroundTint="@color/red_color"
        android:gravity="center"
        android:text="@string/to_auth"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="432dp" />

    <TextView
        android:id="@+id/splash_tex1"
        android:layout_width="174dp"
        android:layout_height="37dp"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/splash_text1"
        android:textColor="@color/gray_color"
        android:textSize="32sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="322dp" />

    <TextView
        android:id="@+id/splash_text2"
        android:layout_width="240dp"
        android:layout_height="28dp"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/splash_text2"
        android:textColor="@color/gray_color"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="551dp" />

</androidx.constraintlayout.widget.ConstraintLayout>